--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       responseDiv.innerHTML = 'Cargando...';
 
-      const apiEndpoint = 'https://api-inference.huggingface.co/models/gpt2'; // Usando el modelo GPT-2 como ejemplo
+      const apiEndpoint = 'https://api-inference.huggingface.co/models/distilgpt2'; // Usando el modelo distilgpt2
       const headers = {
         'Authorization': `Bearer ${token}`,
         'Content-Type': 'application/json'
