--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       responseDiv.innerHTML = 'Cargando...';
 
-      const apiEndpoint = 'https://api-inference.huggingface.co/models/facebook/mbart-large-50-many-to-many-mmt'; // Usando el modelo mBART multilingüe
+      const apiEndpoint = 'https://api-inference.huggingface.co/models/meta-llama/Llama-2-7b-chat'; // Modelo Llama-2 pequeño
       const headers = {
         'Authorization': `Bearer ${token}`,
         'Content-Type': 'application/json'
